# Nail

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  makefile  note.md
.backup/: GLFWImguiGraphicAPIHelper.h
.backup/editor/: ImguiEditor.cpp  ImguiEditor.h  LuaUIPluginManager.cpp  LuaUIPluginManager.h  LuaUIRegister.cpp  LuaUIRegister.h
.backup/editor/LuaUI/: demo.lua
.backup/editor/imgui/: TextView.h  View.cpp  View.h  ViewContainer.cpp  ViewContainer.h
.backup/glfw/: GLFWGraphicAPIHelper.cpp  GLFWHeader.h  Window.h
3rd/: CMakeLists.txt  build_lua.sh
3rd/glad/: glad.c  glad.h
3rd/lua5.3/: README
3rd/lua5.3/doc/: contents.html
src/: CMakeLists.txt  Scene.h  SceneObject.h  Tree.h  Value.h  main.cpp
src/common/: GUID.h  Tree.h  assert.cc  assert.h  backtrace.h  def.h  plog.h  ref.h  spinlock.h  vec.h
src/driver/image_loader/: ImageLoaderImpl.cpp  ImageLoaderImpl.h
src/driver/mesh_loader/: ObjMeshLoader.cpp  ObjMeshLoader.h
src/driver/opengl/: OGLMesh.h  OGLRasterizer.cpp  OGLRasterizer.h  OGLShader.h  OGLTexture.cpp  OGLTexture.h  OpenglFrameBuffer.cpp  OpenglFrameBuffer.h  OpenglRenderSystem.cpp  OpenglRenderSystem.h  OpenglRenderTarget.cpp  OpenglRenderTarget.h  OpenglShader.cpp  OpenglShader.h  OpenglShaderPhongLight.cpp  OpenglShaderPhongLight.h  OpenglShaderScreen.cpp  OpenglShaderScreen.h  OpenglTexture.h  OpenglTexture2D.cpp  OpenglTexture2D.h  OpenglTextureFactory.cpp  OpenglTextureFactory.h  OpenglTextureManager.cpp  OpenglTextureManager.h  OpenglVertexAttribIndex.h  OpenglVertexBuffer.cpp  OpenglVertexBuffer.h  OpenglVertexBufferFactory.cpp  OpenglVertexBufferFactory.h  Texture.cpp  Texture.h
src/driver/opengl/shader/: phong_light_fragment.glsl  phong_light_vertex.glsl  screen_fragment.glsl  screen_vertex.glsl  vertex_demo.glsl
src/editor/: Editor.h  GLFWGraphicAPIHelper.cpp  GLFWGraphicAPIHelper.h  GLFWHeader.h  GLFWwindowWrapper.h  GraphicAPIHelper.cpp  GraphicAPIHelper.h  ImguiEditor.cpp  ImguiEditor.h  ImguiGraphicAPIHelper.h  LuaUIPlugin.cpp  LuaUIPlugin.h  LuaUIPluginManager.h  LuaUIRegister.cpp
src/editor/LuaUI/: demo.lua
src/editor/imgui/: TextView.cpp  View.cpp  View.h
src/renderer/: Material.h  Mesh.h  Rasterizer.h  RenderSystem.cpp  RenderSystem.h  RenderTarget.h  RenderVertexBuffer.h  RenderVertexBufferFactory.h  Renderable.h  Resource.h  ResourceManager.h  Shader.h  Texture.h
src/renderer/glfw/: GLFWGraphicAPIHelper.cpp  GLFWGraphicAPIHelper.h  GLFWImguiGraphicAPIHelper.cpp  GLFWImguiGraphicAPIHelper.h  GLFWwindowWrapper.cpp  GLFWwindowWrapper.h
src/renderer/graphic_api/: GLFWGraphicAPIHelper.cpp  GLFWGraphicAPIHelper.h  GLFWImguiGraphicAPIHelper.cpp  GLFWImguiGraphicAPIHelper.h  GLFWwindowWrapper.cpp  GLFWwindowWrapper.h  GraphicAPIHelper.h
src/scene/: Attenuatable.h  Camera.cpp  Camera.h  CommonMesh.h  CommonPass.h  Context.cpp  Context.h  Directional.h  DirectionalLight.h  Entity.cpp  Entity.h  EntityFactory.cpp  EntityFactory.h  EntityFactoty.h  IMaterial.h  IMovable.h  IRenderable.h  IRotatable.h  IScalable.h  ImageLoader.h  Light.h  Material.h  MaterialImpl.h  Mesh.h  MeshLoader.h  MeshManager.cpp  MeshManager.h  Movable.cpp  Movable.h  Pass.cpp  Pass.h  PointLight.h  Renderable.h  Resource.h  ResourceManager.h  Scene.h  SceneManager.cpp  SceneManager.h  SceneNode.cpp  SceneNode.h  (+12 more)
